# mark

./: Cargo.toml
mark/: Cargo.toml
mark-bin/: Cargo.toml
mark-bin/src/: main.rs
mark/src/: dither.rs  lib.rs  util.rs
src/: bw.rs  dither.rs  lib.rs  main.rs
