[workspace]
resolver = "2"
members = ["mark", "mark-bin"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
image = "0.24.6"
mark.path = "./mark"
palette = "0.7.2"

[workspace.lints]
rust.unsafe_code = "forbid"
rust.future_incompatible = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
rust.noop_method_call = "warn"
rust.single_use_lifetimes = "warn"
clippy.use_self = "warn"
